--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body
     background-color: rgb(63, 73, 63);
     color: whitesmoke;
     font-size: 24px;
-    margin: 0;   
+    margin: 0;
+    text-align: center;
 }
 
 ul
@@ -57,34 +58,39 @@ h2
 {
     height: 50px;
     width: 100px;
-    -webkit-box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
-    -moz-box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
+    margin-left: 50px;
 }
 #gra
 {
-    height: 600px;
-    width: 1000px;
+    
+    
     text-align: center;
-    margin: auto;
-    margin-top: 80px;   
+    padding: 100px;
+    margin-top: 80px;
+    display: flex;
+    gap: 150px;
 }
 #karta
 {
     height: 400px;
     width: 300px;
-    -webkit-box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
-    -moz-box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
-    float: left;   
+      
 }
 #kolory
 {
-    height: 400px;
-    width: 600px;
-    -webkit-box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
-    -moz-box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
+    
+    flex: 1;
+    display: grid;
+    gap:40px;
+    grid-template-columns: repeat(4, 1fr);
+    
+}
+.kolor
+{
+    
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
-    float: left;
-    margin-left: 50px;   
+    margin: 0;
+    
 }
