--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ h2
     height: 400px;
     width: 300px;
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
+    border-radius: 15px;
+    background-image: url(colors/zielony.png);
       
 }
 #kolory
