--- a/style.css
+++ b/style.css
@@ -47,8 +47,6 @@ h2
     color: rgb(182, 136, 36);
     text-align: center;
     font-size: 1.5em;
-    -webkit-box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
-    -moz-box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     border: none;
     border-radius: 10px;
@@ -77,7 +75,7 @@ h2
     width: 300px;
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     border-radius: 15px;
-    background-image: url(colors/zielony.png);
+    
       
 }
 #kolory
@@ -94,5 +92,6 @@ h2
     
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     margin: 0;
+    border-radius: 15px;
     
 }
