--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body
 {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(63, 73, 63);
     color: whitesmoke;
     font-size: 24px;
     margin: 0;
     text-align: center;
+    line-height: 1.2;
 }
 
 ul
@@ -47,6 +49,8 @@ h2
 }
 #losuj
 {
+    height: 60px;
+    width: auto;
     background-color: rgb(68, 45, 10);
     color: rgb(182, 136, 36);
     text-align:center;
@@ -54,20 +58,22 @@ h2
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     border: none;
     border-radius: 10px;
-    padding:8px;  
+    padding:8px 30px;
+    
 }
 #czas
 {
-    height: 50px;
-    width: 100px;
+    height: 60px;
+    width: auto;
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     margin-left: 100px;
-    padding: 30px;
+    padding: 8px 30px;
     text-align:center;
-    font-size: 2em;
+    font-size: 1.5em;
     color:rgb(182, 136, 36);
     border-radius: 10px;
     background-color: rgb(68, 45, 10);
+   
 }
 #gra
 {  
@@ -103,4 +109,18 @@ h2
     margin-top: 30px;
     font-size: 3em;
 
+}
+#wynik
+{
+    height: auto;
+    width: 100px;
+}
+#total
+{
+    height:40px;
+    width: 100px; 
+}
+button
+{
+    line-height: inherit; 
 }
