--- a/style.css
+++ b/style.css
@@ -49,12 +49,12 @@ h2
 }
 #losuj
 {
-    height: 60px;
-    width: auto;
+    height: auto;
+    width: 200px;
     background-color: rgb(68, 45, 10);
     color: rgb(182, 136, 36);
     text-align:center;
-    font-size: 1.5em;
+    font-size: 1em;
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     border: none;
     border-radius: 10px;
@@ -63,13 +63,13 @@ h2
 }
 #czas
 {
-    height: 60px;
-    width: auto;
+    height: auto;
+    min-width: 150px;
     box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
     margin-left: 100px;
     padding: 8px 30px;
     text-align:center;
-    font-size: 1.5em;
+    font-size: 1em;
     color:rgb(182, 136, 36);
     border-radius: 10px;
     background-color: rgb(68, 45, 10);
@@ -108,12 +108,21 @@ h2
 {
     margin-top: 30px;
     font-size: 3em;
+    background-color:rgb(63, 73, 63);
 
 }
 #wynik
 {
-    height: auto;
+    height: 400px;
     width: 100px;
+    background-color: rgb(68, 45, 10);
+    color: rgb(182, 136, 36);
+    text-align:center;
+    font-size: 2.4em;
+    box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
+    border: none;
+    border-radius: 10px;
+    padding:8px;
 }
 #total
 {
