--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h2
     color: rgb(182, 136, 36);
     text-align:center;
     font-size: 1em;
-    box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
+    box-shadow: 0px 0px 10px 0px rgba(182, 136, 36, 1);
     border: none;
     border-radius: 10px;
     padding:8px 30px;
@@ -65,7 +65,7 @@ h2
 {
     height: auto;
     min-width: 150px;
-    box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
+    box-shadow: 0px 0px 10px 0px rgba(182, 136, 36, 1);
     margin-left: 100px;
     padding: 8px 30px;
     text-align:center;
@@ -87,7 +87,7 @@ h2
 {
     height: 400px;
     width: 300px;
-    box-shadow: 8px 8px 24px 0px rgb(243, 242, 239);
+    box-shadow: 0px 0px 24px 0px rgba(243, 242, 239, 1);
     border-radius: 15px;    
 }
 #kolory
@@ -100,7 +100,7 @@ h2
 }
 .kolor
 {   
-    box-shadow: 8px 8px 24px 0px rgb(247, 246, 245);
+    box-shadow: 0px 0px 24px 0px rgba(247, 246, 245, 1);
     margin: 0;
     border-radius: 15px;   
 }
@@ -119,7 +119,7 @@ h2
     color: rgb(182, 136, 36);
     text-align:center;
     font-size: 2.4em;
-    box-shadow: 8px 8px 24px 0px rgb(182, 136, 36);
+    box-shadow: 0px 0px 24px 0px rgba(182, 136, 36, 1);
     border: none;
     border-radius: 10px;
     padding:8px;
